# bounce-genie

./: .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  vite.config.ts
bounce_genie/: __init__.py  cli.py  detector.py  models.py  naming.py  orchestrator.py  queue.py
bounce_genie.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
bounce_genie/adapters/: __init__.py  ableton.py  base.py  cubase.py  logic.py  protools.py  registry.py
bounce_genie/automation/: __init__.py  engine.py
bounce_genie/notifications/: __init__.py  base.py  email_notifier.py  manager.py  sms_notifier.py
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/bounce_genie/: __init__.py  __main__.py  detector.py  models.py  naming.py  queue.py  runner.py
src/bounce_genie/adapters/: __init__.py  ableton.py  base.py  cubase.py  logic.py  protools.py
src/bounce_genie/automation/: __init__.py  engine.py
src/bounce_genie/notifications/: __init__.py  base.py  email.py  sms.py
src/components/: ConfigPanel.tsx  ControlCenter.tsx  Header.tsx  QueuePanel.tsx  StatusBar.tsx
src/types/: index.ts
tests/: test_adapters.py  test_detector.py  test_models.py  test_naming.py  test_notifications.py  test_orchestrator.py  test_queue.py  test_runner.py
