[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bounce-genie"
version = "0.1.0"
description = "Batch bounce/export automation for DAWs with notifications"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "watchdog>=4.0.0",
]

[project.optional-dependencies]
sms = ["twilio>=9.0.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
bounce-genie = "bounce_genie.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bounce_genie*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
